--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -34,12 +34,12 @@
   
   <div id="regInnkommende" class="ui stacked segment">
     <a class="ui blue ribbon label">Dados para pagamento</a>
-    <p style="margin-top:1em;">Banco: Banco CAIXA </p>
-    <p>Agência: 00000000</p>
-    <p>Conta Corrente: 00000000 Operação: 013333333xxx</p>
+    <p style="margin-top:1em;">Banco: AGUARDE! </p>
+    <p>Agência: AGUARDE</p>
+    <p>Conta Corrente: AGUARDE Operação: AGUARDE</p>
     <h5>Enviar email com comprovante para: </h5>
     <p class='ui basic blue button'>
-      <a href="mailto:email@email.com?subject=Comprovante de pagamento&body=Comprovante de pagamento, adicione ao anexo o comprovante!">email@email.com</a>
+      <a href="mailto:email@email.com?subject=Comprovante de pagamento&body=Comprovante de pagamento, adicione ao anexo o comprovante!">AGUARDE!</a>
     </p>
   </div>
 </div>
