--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+
+.banner{
+  background-color: rgba(255, 255, 0, 0.6);
+  background: -webkit-linear-gradient(left,rgba(255,0,0,0),rgba(255, 255, 0, 0.6)); /*Safari 5.1-6*/
+  background: -o-linear-gradient(right,rgba(255,0,0,0),rgba(255, 255, 0, 0.6)); /*Opera 11.1-12*/
+  background: -moz-linear-gradient(right,rgba(255,0,0,0),rgba(255, 255, 0, 0.6)); /*Fx 3.6-15*/
+  background: linear-gradient(to right, rgba(255,0,0,0), rgba(255, 255, 0, 0.6)); /*Standard*/
+}
