dashboard usuario atualizado

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -3,7 +3,7 @@
       <a class="ui yellow ribbon label">Edital para envio de artigos</a>
       <p style="margin-top:2em;">
           <%= render 'layouts/alert_messages' %>
-          Para download do edital <a href="edital.pdf" class="ui tiny button "> CLIQUE AQUI</a>.
+          Para download das normas de submissão de trabalhos <a href="edital.pdf" class="ui tiny button "> CLIQUE AQUI</a>.
       </p>
       <div class="ui form">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, class: 'ui form', multipart: true}) do |f| %>
