--- a/app/views/courses/reporte.pdf.erb
+++ b/app/views/courses/reporte.pdf.erb
@@ -21,6 +21,7 @@
         <tr>
           <th>Nome</th>
           <th>CPF</th>
+          <th>Matrícula</th>
         </tr>
       </thead>
       <tbody>
@@ -28,6 +29,7 @@
           <tr>
             <td><%= student.name %></td>
             <td><%= student.cpf %></td>
+            <td><%= student.matriculation %></td>
           </tr>
         <% end %>
       </tbody>
